CLJ-2862 Update changelog for 1.12